<resources>
    <string name="app_name">Rent A Flat</string>
    <string name="head_text">RENT A FLAT</string>
    <string name="bottom_text">Designed and developed by Martin Collemare \n Version 1.0</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="connexion_title">CONNEXION</string>
    <string name="no_account_button">I don\'t have an account yet.</string>
    <string name="inscription_title">INSCRIPTION</string>
    <string name="signin_button_text">Sign in</string>
    <string name="username_hint">Username</string>
    <string name="short_description_text">Short description flat</string>
    <string name="title_flat_text">Flat</string>
    <string name="head_text_favorite_list">My favorite flats</string>
    <string name="head_text_flat">Flat x</string>
    <string name="addToFavorite_text">Add to favorites</string>
    <string name="added_to_fav_text">Delete from favorites</string>
    <string name="book">Book</string>
    <string name="flat_text">Description flat \n Description flat \n Description flat \n Description flat \n Description flat \n Description flat \n Description flat \n Description flat \n</string>
</resources>